--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,5 @@
 <!-- disqus coding start -->
+{% if page.disqus %}
 <div id="disqus_thread"></div>
 <script>
 
@@ -19,4 +20,5 @@
  })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+{% endif %}
 <!-- disqus coding end -->
