--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,24 +1,23 @@
 <!-- disqus coding start -->
-{% if page.disqus %}
 <div id="disqus_thread"></div>
 <script>
 
 /**
  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
- *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
-/*
-   var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-   };
+ *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
  */
+
+var disqus_config = function () {
+	this.page.url = "http://{{ site.org_site }}{{ page.url }}" + "index.html" ; // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = "{{ site.org_site }}{{ page.url }}" + "index.html" ; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
 (function() { // DON'T EDIT BELOW THIS LINE
      var d = document, s = d.createElement('script');
-     s.src = '//shleekr-github-io.disqus.com/embed.js';
+	 s.src = '//{{ site.disqus_id }}.disqus.com/embed.js';
      s.setAttribute('data-timestamp', +new Date());
      (d.head || d.body).appendChild(s);
  })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-{% endif %}
 <!-- disqus coding end -->
