--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -8,7 +8,7 @@
  */
 
 var disqus_config = function () {
-	this.page.url = "http://{{ site.org_site }}{{ page.url }}" + "index.html" ; // Replace PAGE_URL with your page's canonical URL variable
+	this.page.url = "{{ site.org_site }}{{ page.url }}" + "index.html" ; // Replace PAGE_URL with your page's canonical URL variable
   this.page.identifier = "{{ site.org_site }}{{ page.url }}" + "index.html" ; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
